compilation.log
In file included from main.cpp:2:
dp_solver.h:21:26: error: ‘myenv’ is not a type
   21 |         IloModel mymodel(myenv);
      |                          ^~~~~
dp_solver.h:21:26: error: ‘myenv’ is not a type
   21 |         IloModel mymodel(myenv);
      |                          ^~~~~
dp_solver.h:22:9: error: ‘DP_Reader’ does not name a type
   22 |         DP_Reader reader;
      |         ^~~~~~~~~
dp_solver.h:25:25: error: ‘DP_Reader’ has not been declared
   25 |         void WriteModel(DP_Reader reader_);
      |                         ^~~~~~~~~
dp_solver.h:29:24: error: expected ‘)’ before ‘reader’
   29 |     DP_Solver(DP_Reader reader);
      |              ~         ^~~~~~~
      |                        )
dp_solver.cpp:10:1: error: ‘DP_Solver’ does not name a type
   10 | DP_Solver::DP_Solver(DP_Reader reader_)
      | ^~~~~~~~~
dp_solver.cpp:18:6: error: ‘DP_Solver’ has not been declared
   18 | void DP_Solver::WriteModel(DP_Reader reader)
      |      ^~~~~~~~~
dp_solver.cpp:18:28: error: variable or field ‘WriteModel’ declared void
   18 | void DP_Solver::WriteModel(DP_Reader reader)
      |                            ^~~~~~~~~
dp_solver.cpp:18:28: error: ‘DP_Reader’ was not declared in this scope
